# ark

./: .gitignore  Ark.sln  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql-analysis.yml
Ark.Domain/Entities/: Animal.cs  AnimalHistory.cs  AnimalHistoryItem.cs  Race.cs  Specie.cs
Ark.Shared/: Entity.cs  ValueObject.cs
src/Building Blocks/Ark.Core/Data/: IUnitOfWork.cs
src/Building Blocks/Ark.Core/Entities/: Entity.cs
src/Building Blocks/Ark.Core/Messages/: CommandHandler.cs
src/Building Blocks/Ark.Core/ValueObjects/: Document.cs  ValueObject.cs
src/Building Blocks/Ark.Shared/Data/: IRepository.cs
src/Building Blocks/Ark.Shared/Entities/: Entity.cs
src/Building Blocks/Ark.Shared/Mediator/: IMediatorHandler.cs  MediatorHandler.cs
src/Building Blocks/Ark.Shared/Messages/: Command.cs
src/Domain/Ark.Domain/: Ark.Domain.csproj
src/Domain/Ark.Domain/Entities/: Address.cs  Adopter.cs  Adoption.cs  History.cs  HistoryItem.cs  IUser.cs  Phone.cs
src/Domain/Ark.Domain/Enums/: Gender.cs
src/Domain/Ark.Domain/ValueObjects/: AdoptionFee.cs
src/app/: dependencies.py  main.py
src/app/routers/: animals.py  audit.py  castrations.py  routers.py  veterinary_clinics.py
src/domain/entities/: animal.py  audit.py  castration.py  params.py  veterinary_clinic.py
src/domain/entities/core/: entity.py
src/domain/enums/: payment_type.py  sex.py  specie.py
src/domain/value_objects/: address.py  payment_information.py  phone.py
src/domain/value_objects/core/: value_object.py
tests/: test_ark.py
(+4 files in other folders)
